Changes by Aryan

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -310,7 +310,7 @@
                                     <h1 style="font-size: 24px;
                                     text-transform: uppercase;
                                     font-weight: 700;">Stage 2</h1>
-                                  <h2>Buisness Model Canvas Submission</h2>
+                                  <h2>Business Model Canvas Submission</h2>
                                 </div>
                             </div>
                             <div class="blog-card">
