--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">HOME</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">ABOUT</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">RULES</a></li>
           <li><a class="nav-link scrollto active" href="{% url 'actionplan:mentor-view' %}">MENTORSHIP</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
