--- a/templates/partners.html
+++ b/templates/partners.html
@@ -25,7 +25,7 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assetsp/css/style.css' %}" rel="stylesheet">
   <link href="{% static 'navbar.css' %}" rel="stylesheet">
-
+ <link rel="icon" href="{% static 'logos/favicon.png' %}">
 
   <style>
 
@@ -94,7 +94,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">HOME</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">ABOUT</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">RULES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">MENTORSHIPS</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
@@ -155,7 +155,7 @@
                 <p style="text-align: center;font-size: 1.5rem;margin-top: 11px;">
                   <a href="https://www.twitter.com/indianOilcl" style="text-decoration:none; color: #211f5e"><i class="fab fa-twitter"></i></a> &nbsp
                   <a href="https://www.instagram.com/indianoilcorp" style="text-decoration:none; color: #211f5e"><i class="fab fa-instagram"></i></a> &nbsp
-                  <a href="https://www.facebook.com/IndianOilCorpLimitedps://www.facebook.com/SchaefflerIndia/" style="text-decoration:none; color: #211f5e"><i class="fab fa-facebook-f"></i></a> &nbsp
+                  <a href="https://www.facebook.com/IndianOilCorpLimited" style="text-decoration:none; color: #211f5e"><i class="fab fa-facebook-f"></i></a> &nbsp
                   <a href="https://www.linkedin.com/company/indian-oil-corp-limited" style="text-decoration:none; color: #211f5e"><i class="fab fa-linkedin-in"></i></a>
                 </p>
             </div> <!-- end of col -->
@@ -262,7 +262,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Incubation partner/logo.png' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="https://zoutons.com/">https://zoutons.com/</a></h4>
+                <h4><a href="https://springup10x.com/">https://springup10x.com/</a></h4>
                 <p>INCUBATION PARTNERS</p>
                 <div class="portfolio-links">
                  
@@ -441,7 +441,7 @@
               <img src="{% static 'assetsp/img/partners/Investment partner/fair angels.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.fairangels.vc/">https://www.fairangels.vc/</a></h4>
-                <p>INVESTOR PARTNERS</p>
+                <p>INVESTMENT PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
               </div>
@@ -452,7 +452,7 @@
               <img src="{% static 'assetsp/img/partners/Investment partner/loox.png' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.100x.vc/">https://www.100x.vc/</a></h4>
-                <p>INVESTOR PARTNERS</p>
+                <p>INVESTMENT PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
               </div>
@@ -462,8 +462,8 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Investment partner/stufflane-logo.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="https://zoutons.com/">https://zoutons.com/</a></h4>
-                <p>INVESTOR PARTNERS</p>
+                <h4><a href="https://censie.in/">https://censie.in/</a></h4>
+                <p>INVESTMENT PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
               </div>
@@ -474,7 +474,7 @@
               <img src="{% static 'assetsp/img/partners/Investment partner/ventures-shirish.png' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.linkedin.com/company/shirishventures/about/">https://www.linkedin.com/company/shirishventures/about/</a></h4>
-                <p>INVESTOR PARTNERS</p>
+                <p>INVESTMENT PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
               </div>
@@ -691,7 +691,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Outreach Partners/BMS.png' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="https://zoutons.com/">https://zoutons.com/</a></h4>
+                <h4><a href="https://www.bms.co.in/">https://www.bms.co.in/</a></h4>
                 <p>OUTREACH PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
@@ -702,7 +702,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Outreach Partners/Bschool.png' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="https://zoutons.com/">https://zoutons.com/</a></h4>
+                <h4><a href="http://www.b-school.com/">http://www.b-school.com/</a></h4>
                 <p>OUTREACH PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
@@ -913,7 +913,7 @@
               <img src="{% static 'assetsp/img/partners/other partners/bits.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.bits-pilani.ac.in/hyderabad/tbi/home">https://www.bits-pilani.ac.in/hyderabad/tbi/home</a></h4>
-                <p>OTHER PARTNERS</p>
+                <p>INSTITUTE PARTNERS</p>
                 <div class="portfolio-links">
                   </div>
               </div>
