--- a/templates/rulesfaq.html
+++ b/templates/rulesfaq.html
@@ -27,12 +27,13 @@
   <link href="{% static 'assetsr/css/style.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 <link href="{% static 'navbar.css' %}" rel="stylesheet">
-
+ <link rel="icon" href="{% static 'logos/favicon.png' %}">
          <style>
             .contactparalinks:hover {
         color: #30D5C8;
     }
         </style>
+
 
 </head>
 
@@ -49,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">HOME</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">ABOUT</a></li>
-          <li><a class="nav-link scrollto active" href="{% url 'actionplan:faq' %}">FAQ</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:faq' %}">RULES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">MENTORSHIP</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
@@ -124,7 +125,7 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p></p>>
         </div>
 
         <div class="faq-list">
@@ -148,10 +149,10 @@
                   <p>
                     Step 2- You will have to provide Team leader's details, Team
                     Members' details, postal and other details as required. You
-                    will receive a confirmation mail.
+                    will receive a confirmation mail with your login credentials.
                   </p>
                   <p>
-                    Step 3- After getting confirmation mail, you can proceed for
+                    Step 3 - After getting login credentials, you can proceed for
                     submission.
                 </p>
               </div>
@@ -169,7 +170,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">WHAT IS THE LAST DATE FOR REGISTRATION? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  The last date for registration is 20th November 2020.
+                  The last date for registration is 26th October 2021.
                 </p>
               </div>
             </li>
@@ -197,8 +198,8 @@
               <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
                 <p>
                     Yes, you can change your team info and other registration
-                    details by mailing one of our managers. You can even add a
-                    team member or drop someone. However you cannot change the
+                    details later on the website. You can even add a
+                    team member or drop someone. However, you cannot change the
                     details of the Team Leader later.
                 </p>
               </div>
@@ -222,10 +223,10 @@
               </div>
             </li>
                 <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-10" class="collapsed">DO I COMPULSORY NEED TO HAVE A TEAM?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-10" class="collapsed">DO I COMPULSORILY NEED TO HAVE A TEAM?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-10" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                    Yes, it's compulsory to have team. It's very difficult for
+                    Yes, it's compulsory to have a team. It's very difficult for
                     individuals to compete.
                 </p>
               </div>
