--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -24,7 +24,7 @@
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-  
+   <link rel="icon" href="{% static 'assets/logos/favicon.png' %}">
 <style>
 *{
     padding: 0;
@@ -475,7 +475,7 @@ Pixel Grid
         <ul>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">HOME</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">ABOUT</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">RULES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">MENTORSHIP</a></li>
           <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
@@ -544,7 +544,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/water-management.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">WATER MANAGEMENT<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif;color: #fff">WATER MANAGEMENT<hr></h5>
                       <p class="card-text" > "According to a recent report of NITI aayog, “21 of the major
                         Indian cities will run out of water by 2020. Thus, this sector
                         will focus on ways to provide and supply clean drinking water.”</p>
@@ -555,7 +555,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/employability.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">EMPLOYABILITY<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif'Anton', sans-serif; color: #fff">EMPLOYABILITY<hr></h5>
                       <p class="card-text" > Our country is facing problems regarding Employability.This
                         sector is for startups that can act as an employment source in
                         rural areas, or for less-educated people.</p>
@@ -566,7 +566,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/health.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">HEALTH<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif; color: #fff">HEALTH<hr></h5>
                       <p class="card-text" >   Seeking Start-Ups tackling malnutrition, providing digital
                         platforms for availing health services, hygiene and sanitation.</p>
                     </div>
@@ -576,7 +576,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/women-empowerment.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">WOMEN EMPOWERMENT<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif; color: #fff">WOMEN EMPOWERMENT<hr></h5>
                       <p class="card-text" >Encouraging startups providing regional rights and facilities,
                         security and protection, employment and employability to women,
                         to register under this sector</p>
@@ -587,7 +587,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/pollution.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">POLLUTION<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif; color: #fff">POLLUTION<hr></h5>
                       <p class="card-text" >“Introducing this sector to come up with technologies that aid
                         people in fighting pollution for the time needed to shift to
                         clean energy fuels” and to improve the existing condition.</p>
@@ -598,7 +598,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/education.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">EDUCATION<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif; color: #fff">EDUCATION<hr></h5>
                       <p class="card-text" >Startups aiming at improving the quality of primary education,
                         creating or prototyping Learning Management Systems (LMS),
                         practical learning aspect of secondary education and enhancing
@@ -610,7 +610,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/security.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #fff">SECURITY<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif; color: #fff">SECURITY<hr></h5>
                       <p class="card-text" >Startups aiming at increasing the security for online users, creating or prototyping physical or cyber security systems.</p>
                     </div>
                   </div>
@@ -619,7 +619,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/rural-development.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-seri; letter-spacing: 0.75px; color: #ffff">RURAL DEVELOPMENT<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #ffff">RURAL DEVELOPMENT<hr></h5>
                       <p class="card-text" >  Startups helping in reducing the gap between rural and urban areas by developing the rural areas, in terms of health, poverty, literacy and infrastructure.</p>
                     </div>
                   </div>
