--- a/templates/structure.html
+++ b/templates/structure.html
@@ -23,6 +23,7 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assetsm&s/css/structure.css' %}" rel="stylesheet">
     <link href="{% static 'navbar.css' %}" rel="stylesheet">
+      <link rel="icon" href="{% static 'logos/favicon.png' %}">
 
 </head>
 
@@ -38,7 +39,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home' %}">HOME</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">ABOUT</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:faq' %}">RULES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">MENTORSHIPS</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
@@ -72,7 +73,7 @@
           </div>
         </div>
         <div class="entry">
-          <div class="title">26|09 - 24|10</div>
+          <div class="title">29|09 - 24|10</div>
           <div class="body">
             <p>Entrepreneurship workshops</p>
           </div>
@@ -109,7 +110,7 @@
           </div>
         </div>
         <div class="entry">
-            <div class="title big">29|09 - 2|1</div>
+            <div class="title big">29|11 - 16|1</div>
             <div class="body">
               <p>Mentoring Period</p>
             </div>
@@ -127,25 +128,25 @@
             </div>
           </div>
           <div class="entry">
-            <div class="title">Jan 2nd week</div>
+            <div class="title">15th Jan 2022</div>
             <div class="body">
               <p>Final Action plan Submission</p>
             </div>
           </div>
           <div class="entry">
-            <div class="title">Jan 2nd week</div>
+            <div class="title">16th Jan 2022</div>
             <div class="body">
               <p>Mentor mentee meetup</p>
             </div>
           </div>
           <div class="entry">
-            <div class="title big">Social Fest</div>
+            <div class="title big">Social Fest 2021-22</div>
             <div class="body">
               <p>Final Pitching round</p>
             </div>
           </div>
           <div class="entry">
-            <div class="title">-</div>
+            <div class="title">TBD</div>
             <div class="body">
               <p>Final Result</p>
             </div>
