--- a/templates/success.html
+++ b/templates/success.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Registration Successful</title>
+        <link rel="icon" href="{% static 'assets/logos/favicon.png' %}">
+
   </head>
   <body>
     <p>
