Changes by sanka

--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -553,7 +553,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/employability.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif'Anton', sans-serif; color: #fff">EMPLOYABILITY<hr></h5>
+                      <h5 class="card-title" style=" font-family: 'Montserrat', sans-serif;  color: #fff">EMPLOYABILITY<hr></h5>
                       <p class="card-text" > Our country is facing problems regarding Employability.This
                         sector is for startups that can act as an employment source in
                         rural areas, or for less-educated people.</p>
@@ -617,7 +617,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/rural-development.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style="font-family: 'Anton', sans-serif; letter-spacing: 0.75px; color: #ffff">RURAL DEVELOPMENT<hr></h5>
+                      <h5 class="card-title" style="font-family: 'Montserrat', sans-serif;  letter-spacing: 0.75px; color: #ffff">RURAL DEVELOPMENT<hr></h5>
                       <p class="card-text" >  Startups helping in reducing the gap between rural and urban areas by developing the rural areas, in terms of health, poverty, literacy and infrastructure.</p>
                     </div>
                   </div>
