--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -553,7 +553,7 @@ Pixel Grid
                   <div class="card">
                     <div class="card-img-top" style="background-image: url('/static/employability.png')"></div>
                     <div class="card-block" >
-                      <h5 class="card-title" style=" font-family: 'Montserrat', sans-serif;  color: #fff">EMPLOYABILITY<hr></h5>
+                      <h5 class="card-title" ;style=" font-family: 'Montserrat', sans-serif  color: #fff">EMPLOYABILITY<hr></h5>
                       <p class="card-text" > Our country is facing problems regarding Employability.This
                         sector is for startups that can act as an employment source in
                         rural areas, or for less-educated people.</p>
