--- a/static/navbar.css
+++ b/static/navbar.css
@@ -189,7 +189,7 @@
   left: 15px;
   padding: 10px 0;
   border-radius: 10px;
-  background-color: #211f5e;
+  background-color: #fff;
   overflow-y: auto;
   transition: 0.3s;
 }
