--- a/templates/rulesfaq.html
+++ b/templates/rulesfaq.html
@@ -125,7 +125,7 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-            <p></p>>
+            <p></p>
         </div>
 
         <div class="faq-list">
@@ -267,7 +267,7 @@
 
                   <hr style="margin: 0 auto; margin-top: 20px; width: 80%; color: #fff;">
       <div class="col-md-12" style="text-align: center; color: #fff; position: relative; padding: 20px 0 10px">
-                <p> Follow Us &nbsp - &nbsp
+                <p> Contact Us &nbsp - &nbsp
                       <a class="contactparalinks" href="https://twitter.com/Abhyuday_IITB" style="text-decoration:none;color: #fff;"><i class="fab fa-twitter"></i></a> &nbsp
                       <a class="contactparalinks" href="https://www.instagram.com/iitbombay_abhyuday/" style="text-decoration:none;color: #fff;"><i class="fab fa-instagram"></i></a> &nbsp
                       <a class="contactparalinks" href="https://www.facebook.com/abhyuday.iitb/" style="text-decoration:none;color: #fff;"><i class="fab fa-facebook-f"></i></a> &nbsp
