--- a/templates/partners.html
+++ b/templates/partners.html
@@ -693,7 +693,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Merchandise Partners/Cottvalley.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="https://zoutons.com/">https://zoutons.com/</a></h4>
+                <h4><a href="https://cottvalley.com/">https://cottvalley.com/</a></h4>
                 <p>Merchandise Partners</p>
                 <div class="portfolio-links">
                   </div>
