--- a/templates/partners.html
+++ b/templates/partners.html
@@ -1003,7 +1003,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/other partners/startupbay.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="http://www.startupbay.in/">http://www.startupbay.in/</a></h4>
+                <h4><a href="https://startupbay.tech/">https://startupbay.tech/</a></h4>
                 <p>ACCELERATOR PARTNER</p>
                 <div class="portfolio-links">
                   </div>
