--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
           <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:structure' %}">STRUCTURE</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">SPONSORS</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">SPONSORS & PARTNERS</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">CONTACT</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -678,13 +678,13 @@ fsEnter.addEventListener('click', function (e) {
 
             </style>
           <div class="section-title" style="width: 100vw; margin: 0 auto;">
-              <h2 class="h2main" style="font-size: 5rem; color: #fff;">ACTION PLAN</h2>
+              <h2 class="h2main" style="font-size: 5rem; color: #fff; margin-bottom: 0;">ACTION PLAN</h2>
           </div>
         </div>
         <div>
-          <h2 style="font-size: 1.5rem;font-weight: 600;color: #fff; margin-bottom: 0.25rem;">Social Entrepreneurship Competition</h2>
+          <h2 style="font-size: 1.5rem;font-weight: 600;color: #fff; margin-bottom: 0.25rem; padding-bottom: 2px;">Social Entrepreneurship Competition</h2>
           <h2 style="font-size: 1.5rem;font-weight: 600;color: #fff;">IDEATE | INNOVATE | IMPLEMENT</h2>
-          <div class="btn1" style="font-size: 3rem">
+          <div class="btn1" style="font-size: 3rem; margin-right: 10px">
             <a data-scroll href="{% url 'actionplan:team-register' %}" class="btn btn-transparent reg-button"
               >REGISTER</a>
             <a data-scroll href="{% url 'actionplan:team-login' %}" class="btn btn-transparent reg-button"
