--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -157,7 +157,7 @@ Cards
 .news-row {
 	margin: 0;
     margin-top: 300px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
 }
 
 .news-block{
@@ -461,7 +461,7 @@ Pixel Grid
 <link rel="icon" href="{% static 'logos/favicon.png' %}">
 
 </head>
-<body style="background: #fdfdfd;">
+<body>
 
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -478,7 +478,7 @@ Pixel Grid
           <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">SECTORS</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">INCENTIVES</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:structure' %}">STRUCTURE</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">SPONSORS</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">SPONSORS & PARTNERS</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">CONTACT</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
